--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "botframework-webchat": "^4.3.0",
     "bulma": "^0.7.4",
     "react": "^16.8.1",
-    "react-dom": "^16.8.1"
+    "react-dom": "^16.8.1",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1"
   }
 }
