Added react map component

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "botframework-webchat": "^4.3.0",
     "bulma": "^0.7.4",
+    "google-map-react": "^1.1.2",
     "react": "^16.8.1",
     "react-dom": "^16.8.1"
   }
