--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "botframework-webchat": "^4.3.0",
     "bulma": "^0.7.4",
     "chart.js": "^2.7.3",
+    "google-maps-react": "^2.0.2",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-google-maps": "^9.4.5",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1"
   }
